--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="script.js"></script>
 </head>
 <body>
-    yolo
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
 </body>
 </html>
