refactored rest of code to add UI, display each rounds result, and display a winner after someone reaches a score of 5

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    <div id="standings">
+        <h3>Player:</h3>
+        <p id="player">0</p>
+        <h3>Computer:</h3>
+        <p id="computer">0</p>
+
+    </div>
+    <div>
+        <h2>RESULT:</h2>
+        <p id="results"></p>
+        <p id="winner"></p>
+    </div>
 </body>
 </html>
